[gd_scene load_steps=12 format=2]

[ext_resource path="res://Objects/Paddle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Balletje.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/UI.gd" type="Script" id=3]
[ext_resource path="res://Fonts/FontStyle.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scripts/PlayerScore.gd" type="Script" id=5]
[ext_resource path="res://Shaders/CRTShader.shader" type="Shader" id=6]
[ext_resource path="res://Scenes/Pause.gd" type="Script" id=7]
[ext_resource path="res://Sounds/ping-pong.wav" type="AudioStream" id=8]
[ext_resource path="res://Scenes/ListenToBallHit.gd" type="Script" id=9]

[sub_resource type="GDScript" id=1]
script/source = "extends Node2D

var amountOfShakes = 5
var shakeHeavyness = 1.5
var shakeDelays = .002

var shakeCounter = 0

func _on_Balltje_hit_paddle(player, velocity):
	shakeCounter = 0
	shakeItBaby(velocity)
	
func shakeItBaby(velocity):
	
	position.x = randf() * velocity * shakeHeavyness
	position.y = randf() * velocity * shakeHeavyness
	
	shakeCounter += 1
	
	yield(get_tree().create_timer(shakeDelays), \"timeout\")
	
	if (shakeCounter < amountOfShakes):
		shakeItBaby(velocity)
	else:
		position = Vector2()
	return
"

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 6 )
shader_param/screen_width = 1024.0
shader_param/screen_height = 600.0
shader_param/BarrelPower = 1.05
shader_param/color_bleeding = 1.1
shader_param/bleeding_range_x = 2.0
shader_param/bleeding_range_y = 3.0
shader_param/lines_distance = 3.0
shader_param/scan_size = 3.0
shader_param/scanline_alpha = 0.95
shader_param/lines_velocity = 30.0

[node name="MainScene" type="Node2D"]
script = SubResource( 1 )

[node name="Balltje" parent="." instance=ExtResource( 2 )]
position = Vector2( 424, 296 )

[node name="Player1" parent="." instance=ExtResource( 1 )]
position = Vector2( 40, 352 )
scale = Vector2( 4.65806, 2.22556 )

[node name="Player2" parent="." instance=ExtResource( 1 )]
position = Vector2( 976, 360 )
scale = Vector2( 4.65806, 2.22556 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P1Score" type="Label" parent="UI"]
margin_left = 352.0
margin_top = 104.0
margin_right = 452.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 4 )
text = "00"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P2Score" type="Label" parent="UI"]
margin_left = 576.0
margin_top = 104.0
margin_right = 676.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 4 )
text = "00"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI"]
margin_left = 512.0
margin_top = 64.0
margin_right = 517.0
margin_bottom = 520.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Control" parent="UI"]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paused text" type="Label" parent="UI/Pause"]
margin_left = 368.0
margin_top = 272.0
margin_right = 668.0
margin_bottom = 322.0
custom_fonts/font = ExtResource( 4 )
text = "Paused"

[node name="ColorRect" type="ColorRect" parent="UI/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 984.0
margin_bottom = 552.0
color = Color( 1, 1, 1, 0.235294 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 2 )
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
script = ExtResource( 9 )
[connection signal="hit_paddle" from="Balltje" to="AudioStreamPlayer" method="_on_Balltje_hit_paddle"]
[connection signal="hit_paddle" from="Balltje" to="." method="_on_Balltje_hit_paddle"]
[connection signal="hit_wall" from="Balltje" to="AudioStreamPlayer" method="_on_Balltje_hit_wall"]
[connection signal="miss" from="Balltje" to="UI" method="_on_Balltje_miss"]
[connection signal="miss" from="Balltje" to="AudioStreamPlayer" method="_on_Balltje_miss"]
[connection signal="scoreChanged" from="UI" to="UI/P2Score" method="_on_UI_scoreChanged"]
[connection signal="scoreChanged" from="UI" to="UI/P1Score" method="_on_UI_scoreChanged"]
